# tinkerland

./: README.md  mainwindow.cpp  mainwindow.ui  serialdevice.cpp
AI/AdversarialSearch/: board.py  details.html  project1.py  project1Full.py  project1Limited.py
AI/AdversarialSearch/html/: game+02-02+03-03+03-02+02-03T0.html  game+03-03+04-04+04-03+03-04T0.html  game10vs1+06-06+07-07+07-06+06-07T0.html  game1vs6+05-05+06-06+06-05+05-06T0.html  game2vs1+06-06+07-07+07-06+06-07T0.html  game3vs1+06-06+07-07+07-06+06-07T0.html  game4vs1+06-06+07-07+07-06+06-07T0.html  game5vs10+06-06+07-07+07-06+06-07T0.html  game5vs2+06-06+07-07+07-06+06-07T0.html  game6vs1+05-05+06-06+06-05+05-06T0.html  game6vs2+05-05+06-06+06-05+05-06T0.html  game6vs3+05-05+06-06+06-05+05-06T0.html  game6vs4+05-05+06-06+06-05+05-06T0.html  game6vs5+05-05+06-06+06-05+05-06T0.html  game6vs6+05-05+06-06+06-05+05-06T0.html
AI/AdversarialSearch/test_output/: exe_times.txt  grep  org3,3lim1,10.out  org3,3lim1,10Moves.out  org3,3lim1,5.out  org3,3lim1,5Moves.out  org3,3lim1,6.out  org3,3lim1,7.out  org3,3lim6,1.out  org4,4lim1.out  org4,4lim4.out  org4,4lim5.out  org5,5lim3.out  org9,9lim3.out  org9,9lim3.out2  org9,9lim3.out3  test.out  tests.txt
AI/ArtificialNeuralNetwork/: AndOrNotGate.net  DISCUSSION.txt  Makefile  Project2.files  dataset.cpp  dataset.h  debug.h  electionDataSource.cpp  electionDataSource.h  electiond7102.net  less  logic_test.cpp  neuron.cpp  neuron.h  nntool.cpp  ok_predictor.net  output  predict.cpp  testdatasource.cpp  testdatasource.h  utils.cpp  utils.h
AI/ArtificialNeuralNetwork/datasets/: 2008results.txt  DataDict.txt  DataSet.txt  FIPS_CountyName.txt  columnHeaders.txt  inputColumns.txt
AI/ArtificialNeuralNetwork/results/: best_predictor.net  electiond7104.net  electiond7105.net  electiond7106.net
Common/: PThread.cpp  PThread.h  timedRecieve.h  timer.cpp  timer.h
Common/DiGraph/: .DiGraph.cpp~  .DiGraph.h~  .Edge.cpp~  .Vertex.h~  DiGraph.cpp  DiGraph.h  Edge.cpp  Edge.h  Vertex.cpp  Vertex.h
Common/DiGraph/.svn/: entries
ComputerVision/: CVPractice.creator.user.1.3  CVPractice.files  Makefile  README  blurEdges.cpp  checkerboard.cpp  colorThresh.cpp  colorThresh1Chan.cpp  contours.cpp  crosshairs.cpp  floodFillSegment.cpp  floodFillSegment1Chan.cpp  glcm-slow.cpp  glcm.cpp  goodfeatures.cpp  houghLines.cpp  kdnode.h  keypoints.cpp  laserMouse.cpp  lkt.cpp  lkt.h  lucaskanade.cpp  motion.cpp  normThresh.cpp  perspective.cpp  routines.h  shapeTest.cpp  stereoTest.c
ComputerVision/MotionSeg/: affineModel.cpp  affineModel.h  gjsolver.cpp  kdnode.h  lkdemo.cpp  motionseg.cpp  testmatrix.txt  testmatrix2.txt  utils.h
ComputerVision/utils/: normRGB.cpp  normRGB.h
ICP/data/: test.txt  test2.txt
ICP/gui/ICPViewer/: ICPViewer.pro  logparser.cpp  logparser.h  resources.qrc
ICP/gui/ICPViewer/forms/: mainwindow.ui
ICP/gui/ICPViewer/src/: mainwindow.cpp  mainwindow.h
ICP/lib/: Makefile  debug.h  icpmatcher.cpp  icpmatcher.h  kdnode.cpp  kdnode.h  point.cpp  point.h
ICP/libicp/: libicp.cpp  libicp.h  libicp.pro
ICP/utils/: test.cpp
Joystick/: Joystick.pro  QJoystick.cpp  QJoystick.h  joystick.qrc  main.cpp
Joystick/forms/: joystick.ui  joystickView.cpp  joystickView.h  ui_joystick.h
MonitorRotate/: README.md  lsm303test.ino
MonitorRotate/QMonitorRotate/: CMakeLists.txt  QMonitorRotate.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialdevice.h
MonitorRotate/QMonitorRotate/qextserialport/: posix_qextserialport.h  qextserialport.h
MonitorRotate/arduino/: lsm303test.ino
MonitorRotate/cli/: monitorRotate.cpp
Utils/: bigfiles.c  blinkLight.c  filestats.c  huffman.cpp  lineCount.cpp  ops.c  palindromePrimes.cpp
XBeeCC/: .XBeeCC.pro~  .mainwindow.cpp~  Makefile  XBeeCC.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
XBeeCC/QXBee/: .QXBee.cpp~  .QXBee.h~  QXBee.cpp  QXBee.h  QXBeeCommon.h  QXBeeConfig.h
XBeeCC/qextserialport/: .posix_qextserialport.cpp~  qextserialport.h  win_qextserialport.h
battlegrid/: Makefile  battlegrid.pro
battlegrid/server/: Makefile  engine.cpp  engine.h  server.pro  userdata.cpp  userdata.h
docs/: README.md  index.md
odb_test/c++/: CMakeLists.txt  ODB.cmake  build.sh  person.cpp  person.hxx  person_driver.cpp
parsec/: README.md
parsec/simulator/sequential/: .Parsec.java~  .Particle.java~  Makefile  Parsec.java  Particle.java
parsec/simulator/src/: .OctTree2.java~  OctTree.java  OctTree2.java
parsec/simulator/src/.svn/: all-wcprops  entries
parsec/simulator/src/edu/.svn/: all-wcprops  (+1 more)
parsec/simulator/src/sequential/: .Parsec.java~  .Particle.java~  .Utils.java~  Makefile  Parsec.java  Particle.java  Utils.java
qextserialport/: posix_qextserialport.cpp  qextserialbase.h
(+9 files in other folders)
